--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,100 @@
 :root {
     --background: #154f69;
+    --blue: #0652DD;
+    --red: ;
+    --yellow: ;
+    --black: ;
 }
 
 * {
     background-color: var(--background);
     box-sizing: border-box;
+}
+
+h1 {
+    font-size: 75px;
     font-family: 'Rubik', 'Roboto', 'Open Sans', sans-serif;
 }
 
 header {
     width: 100%;
     text-align: center;
-    padding: 10px 10px 10px;
-    font-size: 45px;
+    padding: 10px 10px 40px;
     color: #EA2027;
     text-shadow: 6px 0px #FFC312;
 }
 
-#board {
+#map {
+    position: relative;
+}
+
+#map img {
+    width: 85%;
     display: block;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    padding: 0;
+    margin-left: 14%;
+    margin-right: 1%;
+}
+
+.city {
+    opacity: 1.0
+}
+
+/* .city:hover {
+    opacity: 1.0;
+} */
+
+#atlanta {
+    position: absolute;
+    bottom: 67%;
+    left: 28.5%;
+}
+
+#san-francisco {
+    position: absolute;
+    bottom: 73%;
+    left: 18%;
+}
+
+#chicago {
+    position: absolute;
+    bottom: 74%;
+    left: 24%;
+}
+
+#montreal {
+    position: absolute;
+    bottom: 76%;
+    left: 31%;
+}
+
+#new-york {
+    position: absolute;
+    bottom: 73%;
+    left: 34%;
+}
+
+#dc {
+    position: absolute;
+    bottom: 67%;
+    left: 32%;
+}
+
+#montreal {
+    position: absolute;
+    bottom: 76%;
+    left: 31%;
 }
 
 #player-one {
     height: 250px;
+}
+
+.blue {
+    background-color: var(--blue);
+}
+
+footer {
+    width: 100%;
+    text-align: center;
 }
